2013-02-15 Pierre Nespo <pierre.nespo@gmail.com>
	* Bump to v1.0: Major change is the modification of the parameter name (from data_field to ancestry_field)
2013-03-07 Pierre Nespo <pierre.nespo@gmail.com>
	* Bump to v1.1
	* Change wording for copy_requester.
	* Use currentUser().id() instead of ticket().requester().id() when copy_requester is checked.
	* Change the way groups are fetched. We now fetch groups from /api/v2/groups/assignable.json
	* Change the way the users are fetched. We now fetch users from /api/v2/groups/{id}/users.json.
	* Use of a genericAjaxFailure method to handle all .fail events.
2013-03-07 Pierre Nespo <pierre.nespo@gmail.com>
	* Bump to v1.2
	* Warn the user and stop the app if the ancestry field is not present.
2013-03-19 Pierre Nespo <pierre.nespo@gmail.com>
	* Bump to v1.3
	* Use radio button instead of checkboxes for the requester selection.
	* Add an new requester option (copy the current ticket requester)
2013-03-20 Pierre Nespo <pierre.nespo@gmail.com>
	* Bump to v1.4
	* Fix the use of the REST API users autocomplete.
	* Add french translations.
	* Disable submit button on submit
2013-03-22 Pierre Nespo <pierre.nespo@gmail.com>
	* Bump to v1.5
	* Use custom_fields instead of fields to update/insert custom field
2013-04-19 Pierre Nespo <pierre.nespo@gmail.com>
	* Bump to v1.6
	* Change Logo
	* Move all app logic inside the return to avoid memory leak
2013-06-18 Pierre Nespo <pierre.nespo@gmail.com>
	* Bump to v1.6.1
	* BUGFIX - Wait for the ancestry custom field to be ready before starting the app.
2013-07-04 Pierre Nespo <pierre.nespo@gmail.com>
	* Bump to v1.6.2
	* Add CCs to the form field.
	* Allow tags/ccs to be submitted by hitting the enter key
2013-07-04 Maxime <mprades>
	* Bump to v1.7
	* Loads of changes to be more in line with official Apps guidelines
	* Legal README and Licence file
	* full i18n of the App
	* proper versioning