@@ -1,0 +1,8 @@
+{
+  "ticket_fields": {
+    "linked_ticket_id": {
+      "type": "text",
+      "title": "Linked Ticket ID"
+    }
+  }
+}
